Adding google sign in authentication

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Project 1</string>
+    <string name="default_web_client_id">347909345061-pg9vrjn8du07nau7tucqrui5v8chdcc6.apps.googleusercontent.com</string>
 </resources>
