--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,16 @@
     <string name="app_name">Project 1</string>
     <string name="default_web_client_id">347909345061-pg9vrjn8du07nau7tucqrui5v8chdcc6.apps.googleusercontent.com</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- Menu -->
+    <string name="create_post">Create Post</string>
+    <string name="sign_out">Sign Out</string>
+
+    <!-- Create Post -->
+    <string name="title">Title</string>
+    <string name="timestamp">Timestamp</string>
+    <string name="message">Message</string>
+    <string name="enter_a_message">Enter a message</string>
+    <string name="enter_a_title">Enter a title</string>
+    <string name="cancel">Cancel</string>
+    <string name="submit">Submit</string>
 </resources>
