--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 
     <!-- Menu -->
     <string name="create_post">Create Post</string>
+    <string name="view_your_posts">View Your Posts</string>
     <string name="sign_out">Sign Out</string>
 
     <!-- Create Post -->
@@ -14,4 +15,7 @@
     <string name="enter_a_title">Enter a title</string>
     <string name="cancel">Cancel</string>
     <string name="submit">Submit</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
