--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
-    <string name="app_name">Project 1</string>
+    <string name="app_name">Project 2</string>
+
+    <!-- Firebase key -->
     <string name="default_web_client_id">347909345061-pg9vrjn8du07nau7tucqrui5v8chdcc6.apps.googleusercontent.com</string>
+
+    <!-- Google Map API key -->
+    <string name="google_map_api">AIzaSyC8baJpDFplbZ-0B_EuOgRYCHppdxpTVs8</string>
 
     <!-- Menu -->
     <string name="create_post">Create Post</string>
