--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <!-- Google Map API key -->
     <string name="google_map_api">AIzaSyC8baJpDFplbZ-0B_EuOgRYCHppdxpTVs8</string>
-    <string name="welcome">WELCOME TO GROUPO</string>
+    <string name="welcome">Welcome to Groupo, anonymously communicate with people near you!</string>
 
     <!-- Titles -->
     <string name="create_post">Add Post</string>
